--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ include 'module_automation_testing_basics'
 
 include 'project_private_property_insurance_calculator:stage_1'
 include 'project_private_property_insurance_calculator:stage_2'
+include 'project_private_property_insurance_calculator:stage_3'
 
