--- a/settings.gradle
+++ b/settings.gradle
@@ -7,4 +7,5 @@ include 'project_private_property_insurance_calculator:stage_4'
 include 'project_private_property_insurance_calculator:stage_5'
 include 'project_private_property_insurance_calculator:stage_6'
 include 'project_private_property_insurance_calculator:stage_7'
+include 'project_private_property_insurance_calculator:stage_8'
 
