--- a/settings.gradle
+++ b/settings.gradle
@@ -10,4 +10,5 @@ include 'project_private_property_insurance_calculator:stage_7'
 include 'project_private_property_insurance_calculator:stage_8'
 include 'project_private_property_insurance_calculator:stage_9'
 include 'project_private_property_insurance_calculator:stage_10'
+include 'project_private_property_insurance_calculator:stage_11'
 
