--- a/settings.gradle
+++ b/settings.gradle
@@ -11,4 +11,5 @@ include 'project_private_property_insurance_calculator:stage_8'
 include 'project_private_property_insurance_calculator:stage_9'
 include 'project_private_property_insurance_calculator:stage_10'
 include 'project_private_property_insurance_calculator:stage_11'
+include 'project_private_property_insurance_calculator:stage_12'
 
