--- a/settings.gradle
+++ b/settings.gradle
@@ -14,4 +14,5 @@ include 'project_private_property_insurance_calculator:stage_11'
 include 'project_private_property_insurance_calculator:stage_12'
 include 'project_private_property_insurance_calculator:stage_13'
 include 'project_private_property_insurance_calculator:stage_14'
+include 'project_private_property_insurance_calculator:stage_15'
 
