--- a/settings.gradle
+++ b/settings.gradle
@@ -15,4 +15,5 @@ include 'project_private_property_insurance_calculator:stage_12'
 include 'project_private_property_insurance_calculator:stage_13'
 include 'project_private_property_insurance_calculator:stage_14'
 include 'project_private_property_insurance_calculator:stage_15'
+include 'project_private_property_insurance_calculator:stage_16'
 
