private property insurance calc

--- a/settings.gradle
+++ b/settings.gradle
@@ -16,4 +16,5 @@ include 'project_private_property_insurance_calculator:stage_13'
 include 'project_private_property_insurance_calculator:stage_14'
 include 'project_private_property_insurance_calculator:stage_15'
 include 'project_private_property_insurance_calculator:stage_16'
+include 'project_private_property_insurance_calculator:stage_17'
 
