--- a/settings.gradle
+++ b/settings.gradle
@@ -17,4 +17,5 @@ include 'project_private_property_insurance_calculator:stage_14'
 include 'project_private_property_insurance_calculator:stage_15'
 include 'project_private_property_insurance_calculator:stage_16'
 include 'project_private_property_insurance_calculator:stage_17'
+include 'project_private_property_insurance_calculator:stage_18'
 
