--- a/settings.gradle
+++ b/settings.gradle
@@ -19,4 +19,5 @@ include 'project_private_property_insurance_calculator:stage_16'
 include 'project_private_property_insurance_calculator:stage_17'
 include 'project_private_property_insurance_calculator:stage_18'
 include 'project_private_property_insurance_calculator:stage_19'
+include 'project_private_property_insurance_calculator:stage_20'
 
