private property insurance calc

--- a/settings.gradle
+++ b/settings.gradle
@@ -21,4 +21,5 @@ include 'project_private_property_insurance_calculator:stage_18'
 include 'project_private_property_insurance_calculator:stage_19'
 include 'project_private_property_insurance_calculator:stage_20'
 include 'project_private_property_insurance_calculator:stage_21'
+include 'project_private_property_insurance_calculator:stage_22'
 
