--- a/settings.gradle
+++ b/settings.gradle
@@ -22,4 +22,5 @@ include 'project_private_property_insurance_calculator:stage_19'
 include 'project_private_property_insurance_calculator:stage_20'
 include 'project_private_property_insurance_calculator:stage_21'
 include 'project_private_property_insurance_calculator:stage_22'
+include 'project_private_property_insurance_calculator:stage_23'
 
