--- a/settings.gradle
+++ b/settings.gradle
@@ -25,4 +25,5 @@ include 'project_private_property_insurance_calculator:stage_22'
 include 'project_private_property_insurance_calculator:stage_23'
 include 'project_private_property_insurance_calculator:stage_24'
 include 'project_private_property_insurance_calculator:stage_25'
+include 'project_private_property_insurance_calculator:stage_26'
 
